--- a/.gitignore
+++ b/.gitignore
@@ -943,3 +943,26 @@ xbmc/main/posix/Makefile
 
 /pvr-addons
 /adsp-addons
+
+/lib/addons/library.kodi.adsp/project/VS2010Express/x64/
+/lib/addons/library.kodi.guilib/project/VS2010Express/x64/
+/lib/addons/library.xbmc.addon/project/VS2010Express/x64/
+/lib/addons/library.xbmc.codec/project/VS2010Express/x64/
+/lib/addons/library.xbmc.pvr/project/VS2010Express/x64/
+/lib/cpluff/libcpluff/win32/x64/
+/lib/cximage-6.0/jasper/x64/
+/lib/cximage-6.0/jbig/x64/
+/lib/cximage-6.0/jpeg/x64/
+/lib/cximage-6.0/mng/x64/
+/lib/cximage-6.0/png/x64/
+/lib/cximage-6.0/raw/x64/
+/lib/cximage-6.0/tiff/x64/
+/lib/cximage-6.0/zlib/x64/
+/lib/libexif/x64/
+/lib/win32/Effects11/Bin/
+/project/VS2010Express/x64/
+/tools/depends/native/libsquish-native/src/vs7/squish/x64/
+/xbmc/visualizations/DirectXSpectrum/x64/
+/xbmc/visualizations/Milkdrop/x64/
+/xbmc/visualizations/Vortex/Vortex/x64/
+/xbmc/visualizations/WaveForm/x64/
